unpackaged/main/default/objects/RICSC_Activity__c/RICSC_Activity__c.object-meta.xml
<CustomObject>
    <description>Activity object is used to collect the interaction between Sales assistant and the customers.</description>
    <label>Activity</label>
    <nameField>
        <label>Activity Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>