unpackaged/main/default/objects/RICSC_Activity__c/fields/RICSC_Account__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Direct lookup to an account  from  which the activity originated - Release 1 SC</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>RICSC_ActivitiesAccount</relationshipName>
        <type>Lookup</type>
    </CustomField>