unpackaged/main/default/objects/RICSC_Activity__c/fields/RICSC_ActivityType__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ActivityType__c</fullName>
        <description>Type of Activity</description>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>After Sales</fullName>
                </value>
                <value>
                    <fullName>Almoço/ Jantar</fullName>
                </value>
                <value>
                    <fullName>Anniversary Gift</fullName>
                </value>
                <value>
                    <fullName>ZZ00</fullName>
                    <label>Appointment test</label>
                </value>
                <value>
                    <fullName>Asistencia Evento</fullName>
                </value>
                <value>
                    <fullName>Birthday Gift</fullName>
                </value>
                <value>
                    <fullName>Books And Catalogues</fullName>
                </value>
                <value>
                    <fullName>ZACA</fullName>
                    <label>Boutique Appointment</label>
                </value>
                <value>
                    <fullName>Z018</fullName>
                    <label>Boutique Clienteling</label>
                </value>
                <value>
                    <fullName>Z004</fullName>
                    <label>Call</label>
                </value>
                <value>
                    <fullName>Campaign</fullName>
                </value>
                <value>
                    <fullName>Cartier Events</fullName>
                </value>
                <value>
                    <fullName>Casual Lunch Or Dinner</fullName>
                </value>
                <value>
                    <fullName>Catalog Request</fullName>
                </value>
                <value>
                    <fullName>Chocolate Box</fullName>
                </value>
                <value>
                    <fullName>Cle Contacts</fullName>
                </value>
                <value>
                    <fullName>Clientela</fullName>
                </value>
                <value>
                    <fullName>ZCCA</fullName>
                    <label>Contact Record</label>
                </value>
                <value>
                    <fullName>Convite</fullName>
                </value>
                <value>
                    <fullName>Z016</fullName>
                    <label>Corp. CRM program</label>
                </value>
                <value>
                    <fullName>Z006</fullName>
                    <label>Corporate E-Mail</label>
                </value>
                <value>
                    <fullName>Z014</fullName>
                    <label>Corporate Event</label>
                </value>
                <value>
                    <fullName>Z011</fullName>
                    <label>Corporate Gift</label>
                </value>
                <value>
                    <fullName>Z012</fullName>
                    <label>Corporate Invitation</label>
                </value>
                <value>
                    <fullName>Z001</fullName>
                    <label>Corporate Mail</label>
                </value>
                <value>
                    <fullName>Z013</fullName>
                    <label>Corporate Service</label>
                </value>
                <value>
                    <fullName>Z015</fullName>
                    <label>Corporate Survey</label>
                </value>
                <value>
                    <fullName>Crm Chocolates</fullName>
                </value>
                <value>
                    <fullName>Crm Gifts</fullName>
                </value>
                <value>
                    <fullName>Dinner And Lunch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>