unpackaged/main/default/objects/RICSC_Activity__c/fields/RICSC_Boutique__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Boutique__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the Boutique</description>
        <label>Boutique</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Activities (Boutique)</relationshipLabel>
        <relationshipName>RICSC_ActivitiesBoutique</relationshipName>
        <type>Lookup</type>
    </CustomField>