unpackaged/main/default/objects/RICSC_Activity__c/fields/RICSC_Category__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Category__c</fullName>
        <description>Category of the activity - SAP CRM field</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>100 Anos Pantera Masaryk 16102014</fullName>
                </value>
                <value>
                    <fullName>100 Anos Pantera Masaryk Amex 15102014</fullName>
                </value>
                <value>
                    <fullName>13p Mini Trinket Tray - Crm00401</fullName>
                </value>
                <value>
                    <fullName>2-Notebook Set - Crm00403</fullName>
                </value>
                <value>
                    <fullName>3-Watch Box - Crm00393</fullName>
                </value>
                <value>
                    <fullName>6-Watch Box - Crm00391</fullName>
                </value>
                <value>
                    <fullName>Acc. Tableware</fullName>
                </value>
                <value>
                    <fullName>Access Wm14</fullName>
                </value>
                <value>
                    <fullName>Afternoon Tea</fullName>
                </value>
                <value>
                    <fullName>Agenda</fullName>
                </value>
                <value>
                    <fullName>Alert M+10</fullName>
                </value>
                <value>
                    <fullName>Alert M+3</fullName>
                </value>
                <value>
                    <fullName>Alert M+6</fullName>
                </value>
                <value>
                    <fullName>Alert Watch Y+1</fullName>
                </value>
                <value>
                    <fullName>Alert Watch Y+3</fullName>
                </value>
                <value>
                    <fullName>Alert Watch Y+6</fullName>
                </value>
                <value>
                    <fullName>Alert Watch Y+9</fullName>
                </value>
                <value>
                    <fullName>Alhambra Holiday Season Pendant</fullName>
                </value>
                <value>
                    <fullName>Almoço/ Jantar</fullName>
                </value>
                <value>
                    <fullName>Amazing Cartier</fullName>
                </value>
                <value>
                    <fullName>Amulette</fullName>
                </value>
                <value>
                    <fullName>Aniversário De Casamento</fullName>
                </value>
                <value>
                    <fullName>Anniversary Card</fullName>
                </value>
                <value>
                    <fullName>Anniversary Contact</fullName>
                </value>
                <value>
                    <fullName>Anniversary Gift</fullName>
                </value>
                <value>
                    <fullName>Anniversary Treatment</fullName>
                </value>
                <value>
                    <fullName>Anniversary Whatsapp</fullName>
                </value>
                <value>
                    <fullName>Appointments</fullName>
                </value>
                <value>
                    <fullName>Art De Cartier</fullName>
                </value>
                <value>
                    <fullName>Art Magazine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>