unpackaged/main/default/objects/RICSC_Activity__c/fields/RICSC_ClickAgain__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ClickAgain__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Information about customer action related to the email sent</description>
        <label>Click Again</label>
        <type>Checkbox</type>
    </CustomField>