unpackaged/main/default/objects/RICSC_Activity__c/fields/RICSC_ClickAgainDate__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ClickAgainDate__c</fullName>
        <description>Information about customer action related to the email sent</description>
        <label>Click Again Date</label>
        <type>Date</type>
    </CustomField>