unpackaged/main/default/objects/RICSC_Activity__c/fields/RICSC_ClickAgainURL__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ClickAgainURL__c</fullName>
        <description>Information about customer action related to the email sent</description>
        <label>Click Again URL</label>
        <type>Url</type>
    </CustomField>