unpackaged/main/default/objects/RICSC_Activity__c/fields/RICSC_Contact__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Name</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>RICSC_ActivityContact</relationshipName>
        <type>Lookup</type>
    </CustomField>