unpackaged/main/default/objects/RICSC_Activity__c/fields/RICSC_Cost__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Cost__c</fullName>
        <description>Cost of the activity (for gifts, e.g. bottle of champagne)</description>
        <label>Cost</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>