unpackaged/main/default/objects/RICSC_Activity__c/fields/RICSC_CostCurrency__c.field-meta.xml
<CustomField>
        <fullName>RICSC_CostCurrency__c</fullName>
        <description>Cost of the activity (for gifts, e.g. bottle of champagne)</description>
        <label>Cost Currency</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>