unpackaged/main/default/objects/RICSC_Activity__c/fields/RICSC_CountryofOrigin__c.field-meta.xml
<CustomField>
        <fullName>RICSC_CountryofOrigin__c</fullName>
        <description>Country where the record has been created. Used for the sharing rules (e.g. records created outside of China shouldn't be visible for the Chineese users) - Release 1 SC</description>
        <label>Country of Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RICSC_Country</valueSetName>
        </valueSet>
    </CustomField>