unpackaged/main/default/objects/RICSC_Activity__c/fields/RICSC_Description__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Description__c</fullName>
        <description>Description of the activity (long text)- SAP CRM field</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>