unpackaged/main/default/objects/RICSC_Activity__c/fields/RICSC_EmployeeResponsible__c.field-meta.xml
<CustomField>
        <fullName>RICSC_EmployeeResponsible__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Employee that is responsible for the activity - SAP CRM field</description>
        <label>Employee Responsible</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </CustomField>