unpackaged/main/default/objects/RICSC_Activity__c/fields/RICSC_EndDate__c.field-meta.xml
<CustomField>
        <fullName>RICSC_EndDate__c</fullName>
        <description>End of the activity - SAP CRM field</description>
        <label>End Date</label>
        <type>Date</type>
    </CustomField>