unpackaged/main/default/objects/RICSC_Activity__c/fields/RICSC_NumberOfReferrals__c.field-meta.xml
<CustomField>
        <fullName>RICSC_NumberOfReferrals__c</fullName>
        <description>Information about customer action related to the email sent</description>
        <label>Number Of Referrals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>