unpackaged/main/default/objects/RICSC_Activity__c/fields/RICSC_PlannedEndDate__c.field-meta.xml
<CustomField>
        <fullName>RICSC_PlannedEndDate__c</fullName>
        <description>Date when the activity is scheduled to start</description>
        <label>Planned End Date</label>
        <type>Date</type>
    </CustomField>