unpackaged/main/default/objects/RICSC_Activity__c/fields/RICSC_PlannedStartDate__c.field-meta.xml
<CustomField>
        <fullName>RICSC_PlannedStartDate__c</fullName>
        <description>Date when the activity is scheduled to start</description>
        <label>Planned Start Date</label>
        <type>Date</type>
    </CustomField>