unpackaged/main/default/objects/RICSC_Activity__c/fields/RICSC_Priority__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Priority__c</fullName>
        <description>Priority of the activity - SAP CRM field</description>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Very high</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>