unpackaged/main/default/objects/RICSC_Activity__c/fields/RICSC_Referece__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Referece__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campaign the activity is linked to</description>
        <label>Referece</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Activities (Referece)</relationshipLabel>
        <relationshipName>RICSC_ActivityCampaign</relationshipName>
        <type>Lookup</type>
    </CustomField>