unpackaged/main/default/objects/RICSC_Activity__c/fields/RICSC_ReferenceDescription__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ReferenceDescription__c</fullName>
        <description>Description of the Campaign the activity is linked to</description>
        <label>Reference Description</label>
        <length>32768</length>
        <type>Html</type>
    </CustomField>