unpackaged/main/default/objects/RICSC_Activity__c/fields/RICSC_ReferredDate__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ReferredDate__c</fullName>
        <description>Information about customer action related to the email sent</description>
        <label>Referred Date</label>
        <type>Date</type>
    </CustomField>