unpackaged/main/default/objects/RICSC_Activity__c/fields/RICSC_SalesOrganization__c.field-meta.xml
<CustomField>
        <fullName>RICSC_SalesOrganization__c</fullName>
        <description>Sales Organization SAP field</description>
        <label>Sales Organization</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>