unpackaged/main/default/objects/RICSC_Activity__c/fields/RICSC_StartDate__c.field-meta.xml
<CustomField>
        <fullName>RICSC_StartDate__c</fullName>
        <description>Start of the activity - SAP CRM field</description>
        <label>Start Date</label>
        <type>Date</type>
    </CustomField>