unpackaged/main/default/objects/RICSC_Activity__c/fields/RICSC_Status__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Status__c</fullName>
        <description>Priority of the activity - SAP CRM field</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Follow up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>